--- a/packages/client/src/components/Zone/Zone.css
+++ b/packages/client/src/components/Zone/Zone.css
@@ -1,39 +1,16 @@
-.zone_main{
+body{
     background: radial-gradient(50% 50% at 50% 50%, #404040 0%, #4B4B4B 0.01%, #373737 100%);
+}
+.zone_main{
     position: relative;
-}
-.zone_main .sc-fFubgz.bjBUrT {
-    height: 100%;
-}
-.zone_main .sc-fFubgz.bjBUrT .sc-fubCfw.bpgaAu {
-    background: no-repeat;
-    padding: 0;
-    margin: 0;
-    border: none;
-}
-.zone_main .sc-fFubgz.bjBUrT .sc-fubCfw.bpgaAu:nth-child(1){
-    width: 20%;
-    padding: 90px 0px;
-}
-.zone_main .sc-fFubgz.bjBUrT .sc-fubCfw.bpgaAu:nth-child(2){
-    width: 60%;
-}
-.zone_main .sc-fFubgz.bjBUrT .sc-fubCfw.bpgaAu:nth-child(3){
-    width: 20%;
-    padding: 90px 0px;
-}
-.zone_main .sc-fFubgz.bjBUrT .sc-bkzZxe.blUVQy {
-    height: 100%;
-    width: 100%;
-}
-.zone_main .sc-fFubgz.bjBUrT .sc-fubCfw.bpgaAu:nth-child(1) .sc-pFZIQ.kGZzoj {
-    height: 100%;
     display: flex;
-    flex-flow: column;
-    justify-content: space-around;
+    background: radial-gradient(50% 50% at 50% 50%, #404040 0%, #4B4B4B 0.01%, #373737 100%);
 }
 .blue_team .blue_team_icon {
     position: relative;
+}
+.blue_team .blue_team_icon svg {
+    max-width: 100%;
 }
 .blue_team .blue_team_icon .blue_coins_count {
     position: absolute;
@@ -67,30 +44,162 @@
     top: auto;
     bottom: 20px;
 }
-.zone_main .sc-fFubgz.bjBUrT .sc-fubCfw.bpgaAu .sc-pFZIQ.kGZzoj .sc-bdfBwQ.dGPREY .sc-gsTCUz.sc-kstrdz.eCNiXT.gzJvDH {
-    border: none;
-    padding: 0;
-    background: transparent;
-    margin: 0;
+.zone_main .zone_left_bar {
+    width: 20%;
+    padding: 90px 0px;
+    position: relative;
 }
-.zone_main .sc-fFubgz.bjBUrT .sc-fubCfw.bpgaAu .sc-pFZIQ.kGZzoj > div {
-    height: 300px;
+.zone_main .zone_centre_bar {
+    width: 60%;
+}
+.zone_main .zone_right_bar {
+    width: 20%;
+    position: relative;
+}
+.card_box {
     border: 1px solid #fff;
-    width: 200px;
-    margin: auto auto 15px auto;
-    border-radius:10px;
+    width: 205px;
+    height: 273px;
+    border-radius: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: auto;
+    padding: 15px;
+}
+.card_box .card_text p {
+    margin: 0;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+.zone_main .zone_centre_bar .red_team_main .red_team_hand{
+    height: 205px;
+    border: 1px solid #FFFFFF;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 10px;
+    color: #fff;
+}
+.zone_main .zone_centre_bar .red_team_main .redteam_play_area {
+    height: 205px;
+    border: 1px solid #FFFFFF;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 10px;
+    color: #fff;
+}
+.zone_main .zone_centre_bar .status_message_area {
     text-align: center;
 }
-.zone_main .sc-fFubgz.bjBUrT .sc-fubCfw.bpgaAu .sc-pFZIQ.kGZzoj .sc-bdfBwQ.dGPREY .sc-gsTCUz.sc-kstrdz.eCNiXT.gzJvDH .sc-hBEYos.zDsca {
+.zone_main .zone_centre_bar .status_message_area p {
+    margin: 0;
+    background: #FFD600;
+    border-radius: 10px;
+    display: inline-block;
+    padding: 15px;
+    font-weight: normal;
+    font-size: 18px;
+    font-family: Roboto;
+}
+.menu_set {
+    cursor: pointer;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+.zone_main .zone_right_bar .action_button {
+    text-align: center;
+}
+.zone_main .zone_right_bar .action_button button {
+    background: #272727;
+    border-radius: 10px;
+    color: #FFFFFF;
+    font-weight: normal;
+    font-size: 18px;
+    font-family: Roboto;
     border: none;
+    padding: 15px 6px;
+    cursor: pointer;
 }
-.zone_main .sc-fFubgz.bjBUrT .sc-fubCfw.bpgaAu .sc-pFZIQ.kGZzoj .sc-bdfBwQ.dGPREY .sc-gsTCUz.sc-kstrdz.eCNiXT.gzJvDH .sc-fodVxV.ejLKpO {
-    padding: 0;
+.zone_main .zone_right_bar,
+.zone_main .zone_left_bar {
+    display: flex;
+    flex-flow: column;
+    justify-content: space-around;
 }
-.zone_main .sc-fFubgz.bjBUrT .sc-fubCfw.bpgaAu .sc-pFZIQ.kGZzoj .sc-bdfBwQ.dGPREY {
-    white-space: initial;
-    display: block;
+
+.play_card {
+    width: 134px;
+    overflow: hidden;
+    display: inline-block;
+}
+.play_card .card_name {
+    background: linear-gradient(90deg, #F80000 34.8%, #930000 100%);
+    border-radius: 10px 10px 0px 0px;
+}
+.blue_play_card .card_name{
+    background: linear-gradient(90deg, #2300F8 34.8%, #410093 100%);
+}
+.play_card .card_name p {
+    margin: 0;
+    color: #fff;
+    font-size: 10px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    padding: 2px 0px 2px 11px;
+}
+.play_card .card_space {
+    background: #fff;
+    height: 90px;
+}
+.play_card .hire {
+    background: linear-gradient(270deg, rgba(255, 0, 0, 0.9) 31.42%, rgba(194, 87, 87, 0.9) 100%);
+    transform: rotate(180deg);
+}
+.blue_play_card .hire{
+    background: linear-gradient(270deg, rgba(36, 0, 255, 0.9) 31.42%, rgba(126, 87, 194, 0.9) 100%);
+}
+.play_card .hire p {
+    margin: 0;
+    transform: rotate(180deg);
+    text-align: end;
+    font-size: 8px;
+    color: #fff;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    padding-right: 6px;
+    position: relative;
+}
+.play_card .hire p::before {
+    content: "";
+    position: absolute;
+    width: 40%;
+    height: 7px;
+    background: #fff;
+    left: -4px;
+    bottom: 0;
+    transform: skew(50deg);
+}
+.play_card .card_detail {
+    background: #fff;
+    padding: 8px 0px;
+    border-radius: 0px 0px 10px 10px;
+}
+.play_card .card_detail p {
+    margin: 0;
+    color: #000000;
+    font-size: 10px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    text-align: center;
 }
