--- a/packages/creator/src/assets/css/custom.css
+++ b/packages/creator/src/assets/css/custom.css
@@ -1,10 +1,16 @@
+@import url('https://fonts.gstatic.com');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700;900&display=swap');
+*{
+  font-family: 'Roboto';
+}
 body {
   font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
   color: #fff;
-  background-color: #18141a;
+  background-color: #313131;
   text-rendering: optimizeLegibility;
   overflow-x: hidden;
   text-align: center;
+  margin: 0;
 }
 a {
   color: #fff;
