--- a/packages/client/src/components/Zone/Zone.css
+++ b/packages/client/src/components/Zone/Zone.css
@@ -204,3 +204,23 @@ body{
     font-weight: bold;
     text-align: center;
 }
+
+
+.zone_main .zone_centre_bar > div::-webkit-scrollbar {
+    height: 5px;
+}
+.zone_main .zone_centre_bar > div::-webkit-scrollbar-thumb  {
+    border-radius: 10px;
+}
+.zone_main .zone_centre_bar > div:nth-child(1)::-webkit-scrollbar-thumb{
+    background: #062aaa; 
+}
+.zone_main .zone_centre_bar > div:nth-child(2)::-webkit-scrollbar-thumb{
+    background: #062aaa; 
+}
+.zone_main .zone_centre_bar > div:nth-child(3)::-webkit-scrollbar-thumb{
+    background: red; 
+}
+.zone_main .zone_centre_bar > div:nth-child(4)::-webkit-scrollbar-thumb{
+    background: red; 
+}
