--- a/packages/creator/src/assets/css/custom.css
+++ b/packages/creator/src/assets/css/custom.css
@@ -45,6 +45,17 @@ a {
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  padding: 0 11%;
+  padding: 0 5rem;
+  max-width: 100%!important;
   justify-content: center;
+}
+.container .row{
+  width: 100%;
+}
+input{
+  background: transparent;
+  border: 1px solid white;
+  border-radius: 3px;
+  color:white;
+  padding: 0.5rem;
 }
