--- a/packages/creator/src/routes/Profile/style.css
+++ b/packages/creator/src/routes/Profile/style.css
@@ -1,52 +1,12 @@
-.profileBodyAssets {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    padding: 0 11%;
-    justify-content: center;
+.font-34{
+    font-size: 34px;
+    line-height: 42px;
 }
-.profileBodyNav {
-    max-width: 100%;
-    -webkit-align-self: center;
-    -ms-flex-item-align: center;
-    align-self: center;
+.font-26{
+    font-size: 26px;
+    line-height: 30px;
+    font-weight: 300;
 }
-.profileBodyNavContainer {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    padding: 0px 0px 25px 0px;
-}
-.profileNavLink {
-    -webkit-text-decoration: none;
-    text-decoration: none;
-    color: #C4C4C4;
-    font-size: 2em;
-    padding: 1em;
-    padding-bottom: 0;
-    opacity: 40%;
-}
-.profileNavLink.active {
-    -webkit-text-decoration: none;
-    text-decoration: none;
-    font-weight: bold;
-    color: #c4005d;
-    font-size: 2em;
-    opacity: 100%;
-}
-.disable {
-    pointer-events: none;
-    cursor: default;
-}
-.settingsButtonsContainer {
-  margin-top: 100px;
+.profile-row{
+    margin: 150px 0 50px;
 }
