--- a/packages/client/src/components/Zone/Zone.css
+++ b/packages/client/src/components/Zone/Zone.css
@@ -148,14 +148,14 @@ body {
 }
 
 .zone_main .zone_right_bar .action_button button {
-  background: #272727;
+  background: white;
   border-radius: 10px;
   color: #ffffff;
   font-weight: normal;
   font-size: 18px;
   font-family: Roboto;
   border: none;
-  padding: 15px 6px;
+  padding: 10px 6px;
   cursor: pointer;
 }
 
@@ -288,4 +288,23 @@ body {
 
 .disable {
   pointer-events: none;
+}
+.btn {
+  background: yellow;
+  border-radius: 6px;
+  width: 197px;
+  height: 40px;
+}
+/* .classname1 > div::-webkit-scrollbar-thumb {
+  background-color: #ce0504 !important;
+} */
+.classname1 > div::-webkit-scrollbar-thumb {
+  background: #b70403 !important;
+}
+.card_remain {
+  text-align: center;
+  color: #fff;
+}
+.remainCard {
+  margin-top: 40px;
 }
