--- a/packages/creator/src/components/Card/style.css
+++ b/packages/creator/src/components/Card/style.css
@@ -3,20 +3,18 @@ img {
     height: 100%;
     object-fit: cover;
 }
-.card-grid-container .card{
-    background-color: transparent;
+.card{
+    background-color: transparent!important;
     width: 207px;
     /* height: 329px; */
     display: flex!important;
     flex-direction: column;
     margin: 26px;
     color: black;
-    transition: transform .1s ease-in-out,box-shadow .1s ease-in-out;
-    filter: drop-shadow(0px 0px 4px #000000);
     overflow: hidden;
     background: none;
     border: none!important;
-    border-radius: .5rem;
+    border-radius: .5rem!important;
 }
 .upperCardInfo {
     background: linear-gradient(90deg, #C4008B 34.8%, #c4005d 100%);
@@ -91,6 +89,12 @@ img {
     line-height: 12px;
     font-weight: 300;
 }
+.lowerCardInfo span.large, 
+.lowerCardInfo p.large {
+    font-size: 15px;
+    line-height: 18px;
+    font-weight: 500;
+}
 
 .lowerCardInfoTopLeftSpan {
     color: white;
@@ -98,6 +102,11 @@ img {
     left: 50px;
     top: 3px;
 }
+.lowerCardInfoTopLeftSpan.large{
+    left: 85px;
+    top: 6px;
+}
+
 
 .lowerCardInfoTop { 
     background: linear-gradient(90deg, #C4008B 34.8%, #c4005d 100%);
@@ -205,7 +214,10 @@ img {
     font-size: 10px;
     position: absolute;
     top: 3px;
-    left: 170px;
+    right: 10px;
+}
+.greaseLoadedIntoAsset.large{
+    top: 6px;
 }
 
 .lowerCardInfoMiddle {
@@ -261,6 +273,7 @@ img {
 
 .upperCardInfo.large {
     border-radius: 11px 11px 0px 0px;
+    height: 40px!important;
 }
 
 .upperCardInfo.image {
@@ -302,7 +315,7 @@ img {
 }
 
 .cardAssetName.small {
-    font-size: 0.55em;
+    font-size: 10px;
     font-weight: 500;
 }
 
@@ -311,7 +324,7 @@ img {
 }
 
 .cardAssetName.large {
-    font-size: 1.05em;
+    font-size: 15px!important;
 }
 
 .networkType.small {
@@ -402,6 +415,7 @@ img {
 
 .lowerCardInfoTop.large {
     padding: 0.2em 0.5em 0.2em 0;
+    height: 30px;
 }
 /* 
 .lowerCardInfoTopLeft.small {
@@ -438,8 +452,8 @@ img {
 }
 
 .creatorIcon.large img {
-    width: 1.8em;
-    height: 1.8em;
+    width: 25px;
+    height: 31px;
 }
 
 /* .creatorName.small {
@@ -545,13 +559,22 @@ img {
 } */
 
 .lowerCardInfoMiddle.large {
-    height: 10em;
+    height: 210px;
 }
 
 .lowerCardInfoMiddle.small {
     height: 5em;
 }
-
+.lowerCardInfoMiddle.legendary.large{
+    height: 18px;
+}
+.lowerCardInfoMiddle.legendary.large p {
+    font-size: 10px;
+    line-height: 13px;
+    top: -6px;
+    left: 20px;
+    width: 250px;
+}
 .assetDescription.small {
     height: 5em;
     font-size: 0.6em;
@@ -563,8 +586,7 @@ img {
 }
 
 .assetDescription.large {
-    font-size: 0.8em;
-    font-weight: 400;
+    padding-top: 30px;
 }
 
 
@@ -600,10 +622,10 @@ img {
 .lowerCardInfoMiddle.legendary.unique {
     background: linear-gradient(90deg, #FFC700 34.8%, #665000 100%);
 }
-.card.unique.glow,
+/* .card.unique.glow,
 .card.unique:hover {
    filter: drop-shadow(0px 0px 10px #FFC700);
-}
+} */
 
 
 .upperCardInfo.mythic,
@@ -611,10 +633,10 @@ img {
 .lowerCardInfoMiddle.legendary.mythic {
    background: linear-gradient(90deg, #ef00ff 34.8%, #790971 100%);
 }
-.card.mythic.glow,
+/* .card.mythic.glow,
 .card.mythic:hover {
    filter: drop-shadow(0px 0px 10px #ef00ff);
-}
+} */
 
 
 .upperCardInfo.legendary{
@@ -637,7 +659,7 @@ img {
     font-size: 5px;
     line-height: 6px;
     position: relative;
-    top: -7px;
+    top: -12px;
     left: 10px;
     width: 100px;
     overflow: hidden;
@@ -646,25 +668,25 @@ img {
 }
 .parallelogram {
 	width: 10px;
-	height: 15px;
+	height: 20px;
 	transform: skew(-45deg);
 	background: white;
 }
 .parallelogram-2{
-    margin-left: 7px;
+    margin-left: 10px;
 }
 .triangle-down{
 	width: 0;
 	height: 0;
-	border-right: 12px solid transparent;
-    border-top: 12px solid white;
+	border-right: 20px solid transparent;
+    border-top: 20px solid white;
     position: relative;
-    top: -3px;
+    top: -2px;
 }
-.card.legendary.glow,
+/* .card.legendary.glow,
 .card.legendary:hover {
    filter: drop-shadow(0px 0px 10px #AD00EA);
-}
+} */
 
 
 .upperCardInfo.epic,
@@ -673,10 +695,10 @@ img {
    /* background: linear-gradient(90deg, #00B3DB 34.8%, #003743 100%); */
    background: linear-gradient(90deg, #00C02A 34.8%, #003C02 100%);
 }
-.card.epic.glow,
+/* .card.epic.glow,
 .card.epic:hover {
    filter: drop-shadow(0px 0px 10px #00B3DB);
-}
+} */
 
 
 .upperCardInfo.rare,
